# growth-deprecated

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: grid.h  icosahedron.h  main.h  parametersIO.h  params.h  simulation.h  utils.h
models/: anemone.ply  icosahedron.ply  icosahedron_subd.ply
parameters/: savedParameters.xml
src/: geometry.cpp  geometry.h  grid.cpp  icosahedron.cpp  main.cpp  main.h  octahedron.cpp  octahedron.h  parametersIO.cpp  parametersIO.h  params.h  particle.cpp  particle.h  ply_loader.cpp  ply_loader.h  sage_runs.h  simulation.cpp  simulation.h  utils.h
